--- a/index.html
+++ b/index.html
@@ -6,129 +6,132 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bus Ticket</title>
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
-    <!-- Stylesheet -->
+    <link rel="reconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet" <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body >
+<body>
     <section id="main-area">
-    <!--Header and Menu Section-->
-    <header class="container">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a class="active" href="#">Sign Up</a></li>
-            </ul>
-        </nav>
-    </header>
+        <!--Header and Menu Section-->
+        <header class="container">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a class="active" href="#">Sign Up</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <!--Booking Section-->
-    <main class="main-content container">
+        <!--Booking Section-->
+        <main class="main-content container">
 
-        <div class="booking-content">
-            <h1>Mega City Bus</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book.</p>
-        </div>
-
-
-        <div class="booking-form">
-            <h3>Explore By Bus</h3>
-
-            <div class="inputs">
-                <div class="input-group">
-                    <label" for="">From</label>
-                        <input class="inp-style" type="text" name="" placeholder="Dhaka">
-                </div>
-                <div class="input-group">
-                    <label" for="">From</label>
-                        <input class="inp-style" type="text" name="" placeholder="Chittagone">
-                </div>
+            <div class="booking-content">
+                <h1>Mega City Bus</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and
+                    scrambled it to make a type specimen book.</p>
             </div>
 
-            <div class="inputs">
-                <div class="input-group">
-                    <label" for="">Departure</label>
+
+            <div class="booking-form">
+                <h3>Explore By Bus</h3>
+
+                <div class="inputs">
+                    <div class="input-group">
+                        <label" for="">From</label>
+                            <input class="inp-style" type="text" name="" placeholder="Dhaka">
+                    </div>
+                    <div class="input-group">
+                        <label" for="">From</label>
+                            <input class="inp-style" type="text" name="" placeholder="Chittagong">
+                    </div>
+                </div>
+
+                <div class="inputs">
+                    <div class="input-group">
+                        <label" for="">Departure</label>
+                            <input class="inp-style" type="date" name="">
+                    </div>
+                    <div class="input-group">
+                        <label for="">Return</label>
                         <input class="inp-style" type="date" name="">
-                </div>
-                <div class="input-group">
-                    <label for="">Return</label>
-                    <input class="inp-style" type="date" name="">
-                </div>
-            </div>
-            <div class="inputs">
-                <div class="input-group f-class">
-                    <div>
-                        <label for="">First Class ($ <span id="first-total">150</span> )</label>
-                        <input id="first-count" class="inp-style inp-width" type="text" value="1" name="">
-                    </div>
-                    <div class="plus-minus-btn">
-                        <p>
-                            <button onclick="handelTicket('first',true)" id="firstClass-increase"><i
-                                    class="fas fa-plus"></i></button>
-                            <button onclick="handelTicket('first',false)" id="firstClass-decrease"><i
-                                    class="fas fa-minus"></i></button>
-                        </p>
                     </div>
                 </div>
-                <div class="input-group f-class">
-                    <div>
-                        <label for="">Economy ($ <span id="economic-total">100</span> )</label>
-                        <input id="economic-count" class="inp-style inp-width" type="text" value="1" name="">
+                <div class="inputs">
+                    <div class="input-group f-class">
+                        <div>
+                            <label for="">First Class ($ <span id="first-total">150</span> )</label>
+                            <input id="first-count" class="inp-style inp-width" type="text" value="1" name="" required>
+                        </div>
+                        <div class="plus-minus-btn">
+                            <p>
+                                <button onclick="handelTicket('first',true)" id="firstClass-increase"><i
+                                        class="fas fa-plus"></i></button>
+                                <button onclick="handelTicket('first',false)" id="firstClass-decrease"><i
+                                        class="fas fa-minus"></i></button>
+                            </p>
+                        </div>
                     </div>
-                    <div class="plus-minus-btn">
-                        <p>
-                            <button onclick="handelTicket('economic',true)" id="economic-increase"><i
-                                    class="fas fa-plus"></i></button>
-                            <button onclick="handelTicket('economic',false)" id="economic-decrease"><i
-                                    class="fas fa-minus"></i></button>
-                        </p>
+                    <div class="input-group f-class">
+                        <div>
+                            <label for="">Economy ($ <span id="economic-total">100</span> )</label>
+                            <input id="economic-count" class="inp-style inp-width" type="text" value="1" name=""
+                                required>
+                        </div>
+                        <div class="plus-minus-btn">
+                            <p>
+                                <button onclick="handelTicket('economic',true)" id="economic-increase"><i
+                                        class="fas fa-plus"></i></button>
+                                <button onclick="handelTicket('economic',false)" id="economic-decrease"><i
+                                        class="fas fa-minus"></i></button>
+                            </p>
+                        </div>
                     </div>
-                </div>
 
-            </div>
-            <div class="calculations">
-                <div class="amount">
-                    <div class="left">
-                        <p>Subtotal</p>
-                    </div>
-                    <div class="right">
-                        <p>$ <span id="sub-Total">500</span> </p>
-                    </div>
                 </div>
+                <div class="calculations">
+                    <div class="amount">
+                        <div class="left">
+                            <p>Subtotal</p>
+                        </div>
+                        <div class="right">
+                            <p>$ <span id="sub-Total">500</span> </p>
+                        </div>
+                    </div>
 
-                <div class="amount">
-                    <div class="left">
-                        <p>Charge 10% VAT</p>
+                    <div class="amount">
+                        <div class="left">
+                            <p>Charge 10% VAT</p>
+                        </div>
+                        <div class="right">
+                            <p>$ <span id="total-vat">50</span> </p>
+                        </div>
                     </div>
-                    <div class="right">
-                        <p>$ <span id="total-vat">50</span> </p>
+                    <hr>
+                    <div class="amount">
+                        <div class="left">
+                            <h4>Total</h4>
+                        </div>
+                        <div class="right">
+                            <p>$<span id="total">550</span></p>
+                        </div>
                     </div>
                 </div>
-                <hr>
-                <div class="amount">
-                    <div class="left">
-                        <h4>Total</h4>
-                    </div>
-                    <div class="right">
-                        <p>$<span id="total">550</span></p>
-                    </div>
-                </div>
+                <button id="bookingBtn" class="btn-style">Book Now</button>
             </div>
-            <button id="bookingBtn" class="btn-style">Book Now</button>
+
+        </main>
+    </section>
+
+    <section id="transition-area" class="offset-bg">
+        <div class="transition">
+            <h1>congratulation!!!</h1>
+            <p>your are booking Mega Bus Ticket Sit</p>
         </div>
-
-    </main>
-</section>
-
-    <section id="transition-area">
-        <h1>congratulation you are booking in Mega Bus Ticket </h1>
     </section>
 
     <script src="https://kit.fontawesome.com/4867ffffc4.js" crossorigin="anonymous"></script>
